Logic/parser/LatteParser.cpp

// Generated from Latte.g4 by ANTLR 4.7.2


#include "LatteListener.h"

#include "LatteParser.h"


using namespace antlrcpp;
using namespace antlr4;

LatteParser::LatteParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

LatteParser::~LatteParser() {
  delete _interpreter;
}

std::string LatteParser::getGrammarFileName() const {
  return "Latte.g4";
}

const std::vector<std::string>& LatteParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& LatteParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- MainContext ------------------------------------------------------------------

LatteParser::MainContext::MainContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LatteParser::MainContext::EOF() {
  return getToken(LatteParser::EOF, 0);
}

std::vector<LatteParser::TopDefContext *> LatteParser::MainContext::topDef() {
  return getRuleContexts<LatteParser::TopDefContext>();
}

LatteParser::TopDefContext* LatteParser::MainContext::topDef(size_t i) {
  return getRuleContext<LatteParser::TopDefContext>(i);
}


size_t LatteParser::MainContext::getRuleIndex() const {
  return LatteParser::RuleMain;
}

void LatteParser::MainContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMain(this);
}

void LatteParser::MainContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMain(this);
}

LatteParser::MainContext* LatteParser::main() {
  MainContext *_localctx = _tracker.createInstance<MainContext>(_ctx, getState());
  enterRule(_localctx, 0, LatteParser::RuleMain);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LatteParser::Kclass)
      | (1ULL << LatteParser::Kint)
      | (1ULL << LatteParser::Kstring)
      | (1ULL << LatteParser::Kvoid)
      | (1ULL << LatteParser::Kbool)
      | (1ULL << LatteParser::Identifier))) != 0)) {
      setState(60);
      topDef();
      setState(65);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(66);
    match(LatteParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopDefContext ------------------------------------------------------------------

LatteParser::TopDefContext::TopDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LatteParser::FunctionContext* LatteParser::TopDefContext::function() {
  return getRuleContext<LatteParser::FunctionContext>(0);
}

LatteParser::TypeContext* LatteParser::TopDefContext::type() {
  return getRuleContext<LatteParser::TypeContext>(0);
}


size_t LatteParser::TopDefContext::getRuleIndex() const {
  return LatteParser::RuleTopDef;
}

void LatteParser::TopDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTopDef(this);
}

void LatteParser::TopDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTopDef(this);
}

LatteParser::TopDefContext* LatteParser::topDef() {
  TopDefContext *_localctx = _tracker.createInstance<TopDefContext>(_ctx, getState());
  enterRule(_localctx, 2, LatteParser::RuleTopDef);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(70);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LatteParser::Kint:
      case LatteParser::Kstring:
      case LatteParser::Kvoid:
      case LatteParser::Kbool:
      case LatteParser::Identifier: {
        enterOuterAlt(_localctx, 1);
        setState(68);
        function();
        break;
      }

      case LatteParser::Kclass: {
        enterOuterAlt(_localctx, 2);
        setState(69);
        type();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

LatteParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LatteParser::TypeContext::Kclass() {
  return getToken(LatteParser::Kclass, 0);
}

std::vector<tree::TerminalNode *> LatteParser::TypeContext::Identifier() {
  return getTokens(LatteParser::Identifier);
}

tree::TerminalNode* LatteParser::TypeContext::Identifier(size_t i) {
  return getToken(LatteParser::Identifier, i);
}

tree::TerminalNode* LatteParser::TypeContext::Kextends() {
  return getToken(LatteParser::Kextends, 0);
}

std::vector<LatteParser::TypeMemberContext *> LatteParser::TypeContext::typeMember() {
  return getRuleContexts<LatteParser::TypeMemberContext>();
}

LatteParser::TypeMemberContext* LatteParser::TypeContext::typeMember(size_t i) {
  return getRuleContext<LatteParser::TypeMemberContext>(i);
}


size_t LatteParser::TypeContext::getRuleIndex() const {
  return LatteParser::RuleType;
}

void LatteParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void LatteParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}

LatteParser::TypeContext* LatteParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 4, LatteParser::RuleType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    match(LatteParser::Kclass);
    setState(73);
    match(LatteParser::Identifier);
    setState(76);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LatteParser::Kextends) {
      setState(74);
      match(LatteParser::Kextends);
      setState(75);
      match(LatteParser::Identifier);
    }
    setState(78);
    match(LatteParser::T__0);
    setState(82);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LatteParser::Kint)
      | (1ULL << LatteParser::Kstring)
      | (1ULL << LatteParser::Kvoid)
      | (1ULL << LatteParser::Kbool)
      | (1ULL << LatteParser::Identifier))) != 0)) {
      setState(79);
      typeMember();
      setState(84);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(85);
    match(LatteParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeMemberContext ------------------------------------------------------------------

LatteParser::TypeMemberContext::TypeMemberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LatteParser::DecTypeContext* LatteParser::TypeMemberContext::decType() {
  return getRuleContext<LatteParser::DecTypeContext>(0);
}

tree::TerminalNode* LatteParser::TypeMemberContext::Identifier() {
  return getToken(LatteParser::Identifier, 0);
}

LatteParser::FunctionContext* LatteParser::TypeMemberContext::function() {
  return getRuleContext<LatteParser::FunctionContext>(0);
}


size_t LatteParser::TypeMemberContext::getRuleIndex() const {
  return LatteParser::RuleTypeMember;
}

void LatteParser::TypeMemberContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeMember(this);
}

void LatteParser::TypeMemberContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeMember(this);
}

LatteParser::TypeMemberContext* LatteParser::typeMember() {
  TypeMemberContext *_localctx = _tracker.createInstance<TypeMemberContext>(_ctx, getState());
  enterRule(_localctx, 6, LatteParser::RuleTypeMember);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(92);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(87);
      decType(0);
      setState(88);
      match(LatteParser::Identifier);
      setState(89);
      match(LatteParser::T__2);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(91);
      function();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

LatteParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LatteParser::DecTypeContext* LatteParser::FunctionContext::decType() {
  return getRuleContext<LatteParser::DecTypeContext>(0);
}

tree::TerminalNode* LatteParser::FunctionContext::Identifier() {
  return getToken(LatteParser::Identifier, 0);
}

LatteParser::FuncArgsContext* LatteParser::FunctionContext::funcArgs() {
  return getRuleContext<LatteParser::FuncArgsContext>(0);
}

LatteParser::BlockContext* LatteParser::FunctionContext::block() {
  return getRuleContext<LatteParser::BlockContext>(0);
}


size_t LatteParser::FunctionContext::getRuleIndex() const {
  return LatteParser::RuleFunction;
}

void LatteParser::FunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction(this);
}

void LatteParser::FunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction(this);
}

LatteParser::FunctionContext* LatteParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 8, LatteParser::RuleFunction);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    decType(0);
    setState(95);
    match(LatteParser::Identifier);
    setState(96);
    funcArgs();
    setState(97);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncArgsContext ------------------------------------------------------------------

LatteParser::FuncArgsContext::FuncArgsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LatteParser::FuncArgsContext::ParBL() {
  return getToken(LatteParser::ParBL, 0);
}

tree::TerminalNode* LatteParser::FuncArgsContext::ParBR() {
  return getToken(LatteParser::ParBR, 0);
}

std::vector<LatteParser::ArgContext *> LatteParser::FuncArgsContext::arg() {
  return getRuleContexts<LatteParser::ArgContext>();
}

LatteParser::ArgContext* LatteParser::FuncArgsContext::arg(size_t i) {
  return getRuleContext<LatteParser::ArgContext>(i);
}


size_t LatteParser::FuncArgsContext::getRuleIndex() const {
  return LatteParser::RuleFuncArgs;
}

void LatteParser::FuncArgsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncArgs(this);
}

void LatteParser::FuncArgsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncArgs(this);
}

LatteParser::FuncArgsContext* LatteParser::funcArgs() {
  FuncArgsContext *_localctx = _tracker.createInstance<FuncArgsContext>(_ctx, getState());
  enterRule(_localctx, 10, LatteParser::RuleFuncArgs);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(112);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(99);
      match(LatteParser::ParBL);
      setState(100);
      match(LatteParser::ParBR);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(101);
      match(LatteParser::ParBL);
      setState(102);
      arg();
      setState(107);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == LatteParser::T__3) {
        setState(103);
        match(LatteParser::T__3);
        setState(104);
        arg();
        setState(109);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(110);
      match(LatteParser::ParBR);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgContext ------------------------------------------------------------------

LatteParser::ArgContext::ArgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LatteParser::DecTypeContext* LatteParser::ArgContext::decType() {
  return getRuleContext<LatteParser::DecTypeContext>(0);
}

tree::TerminalNode* LatteParser::ArgContext::Identifier() {
  return getToken(LatteParser::Identifier, 0);
}


size_t LatteParser::ArgContext::getRuleIndex() const {
  return LatteParser::RuleArg;
}

void LatteParser::ArgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArg(this);
}

void LatteParser::ArgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArg(this);
}

LatteParser::ArgContext* LatteParser::arg() {
  ArgContext *_localctx = _tracker.createInstance<ArgContext>(_ctx, getState());
  enterRule(_localctx, 12, LatteParser::RuleArg);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    decType(0);
    setState(115);
    match(LatteParser::Identifier);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

LatteParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LatteParser::BlockContext* LatteParser::StmtContext::block() {
  return getRuleContext<LatteParser::BlockContext>(0);
}

LatteParser::DecTypeContext* LatteParser::StmtContext::decType() {
  return getRuleContext<LatteParser::DecTypeContext>(0);
}

std::vector<LatteParser::DecVarContext *> LatteParser::StmtContext::decVar() {
  return getRuleContexts<LatteParser::DecVarContext>();
}

LatteParser::DecVarContext* LatteParser::StmtContext::decVar(size_t i) {
  return getRuleContext<LatteParser::DecVarContext>(i);
}

std::vector<LatteParser::ExprContext *> LatteParser::StmtContext::expr() {
  return getRuleContexts<LatteParser::ExprContext>();
}

LatteParser::ExprContext* LatteParser::StmtContext::expr(size_t i) {
  return getRuleContext<LatteParser::ExprContext>(i);
}

tree::TerminalNode* LatteParser::StmtContext::OAss() {
  return getToken(LatteParser::OAss, 0);
}

tree::TerminalNode* LatteParser::StmtContext::OPlusPlus() {
  return getToken(LatteParser::OPlusPlus, 0);
}

tree::TerminalNode* LatteParser::StmtContext::OMinusMinus() {
  return getToken(LatteParser::OMinusMinus, 0);
}

tree::TerminalNode* LatteParser::StmtContext::Kreturn() {
  return getToken(LatteParser::Kreturn, 0);
}

tree::TerminalNode* LatteParser::StmtContext::Kif() {
  return getToken(LatteParser::Kif, 0);
}

tree::TerminalNode* LatteParser::StmtContext::ParBL() {
  return getToken(LatteParser::ParBL, 0);
}

tree::TerminalNode* LatteParser::StmtContext::ParBR() {
  return getToken(LatteParser::ParBR, 0);
}

std::vector<LatteParser::StmtContext *> LatteParser::StmtContext::stmt() {
  return getRuleContexts<LatteParser::StmtContext>();
}

LatteParser::StmtContext* LatteParser::StmtContext::stmt(size_t i) {
  return getRuleContext<LatteParser::StmtContext>(i);
}

tree::TerminalNode* LatteParser::StmtContext::Kelse() {
  return getToken(LatteParser::Kelse, 0);
}

tree::TerminalNode* LatteParser::StmtContext::Kwhile() {
  return getToken(LatteParser::Kwhile, 0);
}


size_t LatteParser::StmtContext::getRuleIndex() const {
  return LatteParser::RuleStmt;
}

void LatteParser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}

void LatteParser::StmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt(this);
}

LatteParser::StmtContext* LatteParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 14, LatteParser::RuleStmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(172);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(117);
      match(LatteParser::T__2);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(118);
      block();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(119);
      decType(0);
      setState(120);
      decVar();
      setState(125);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == LatteParser::T__3) {
        setState(121);
        match(LatteParser::T__3);
        setState(122);
        decVar();
        setState(127);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(128);
      match(LatteParser::T__2);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(130);
      expr();
      setState(131);
      match(LatteParser::OAss);
      setState(132);
      expr();
      setState(133);
      match(LatteParser::T__2);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(135);
      expr();
      setState(136);
      match(LatteParser::OPlusPlus);
      setState(137);
      match(LatteParser::T__2);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(139);
      expr();
      setState(140);
      match(LatteParser::OMinusMinus);
      setState(141);
      match(LatteParser::T__2);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(143);
      match(LatteParser::Kreturn);
      setState(144);
      expr();
      setState(145);
      match(LatteParser::T__2);
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(147);
      match(LatteParser::Kreturn);
      setState(148);
      match(LatteParser::T__2);
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(149);
      match(LatteParser::Kif);
      setState(150);
      match(LatteParser::ParBL);
      setState(151);
      expr();
      setState(152);
      match(LatteParser::ParBR);
      setState(153);
      stmt();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(155);
      match(LatteParser::Kif);
      setState(156);
      match(LatteParser::ParBL);
      setState(157);
      expr();
      setState(158);
      match(LatteParser::ParBR);
      setState(159);
      stmt();
      setState(160);
      match(LatteParser::Kelse);
      setState(161);
      stmt();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(163);
      match(LatteParser::Kwhile);
      setState(164);
      match(LatteParser::ParBL);
      setState(165);
      expr();
      setState(166);
      match(LatteParser::ParBR);
      setState(167);
      stmt();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(169);
      expr();
      setState(170);
      match(LatteParser::T__2);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

LatteParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LatteParser::StmtContext *> LatteParser::BlockContext::stmt() {
  return getRuleContexts<LatteParser::StmtContext>();
}

LatteParser::StmtContext* LatteParser::BlockContext::stmt(size_t i) {
  return getRuleContext<LatteParser::StmtContext>(i);
}


size_t LatteParser::BlockContext::getRuleIndex() const {
  return LatteParser::RuleBlock;
}

void LatteParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void LatteParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}

LatteParser::BlockContext* LatteParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 16, LatteParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(174);
    match(LatteParser::T__0);
    setState(178);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LatteParser::T__0)
      | (1ULL << LatteParser::T__2)
      | (1ULL << LatteParser::OMinus)
      | (1ULL << LatteParser::ONot)
      | (1ULL << LatteParser::ParBL)
      | (1ULL << LatteParser::Kreturn)
      | (1ULL << LatteParser::Kwhile)
      | (1ULL << LatteParser::Kif)
      | (1ULL << LatteParser::Knew)
      | (1ULL << LatteParser::Kint)
      | (1ULL << LatteParser::Kstring)
      | (1ULL << LatteParser::Kvoid)
      | (1ULL << LatteParser::Kbool)
      | (1ULL << LatteParser::KTrue)
      | (1ULL << LatteParser::KFalse)
      | (1ULL << LatteParser::Identifier)
      | (1ULL << LatteParser::IntLiteral)
      | (1ULL << LatteParser::StringLiteral))) != 0)) {
      setState(175);
      stmt();
      setState(180);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(181);
    match(LatteParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DecVarContext ------------------------------------------------------------------

LatteParser::DecVarContext::DecVarContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LatteParser::DecVarContext::Identifier() {
  return getToken(LatteParser::Identifier, 0);
}

tree::TerminalNode* LatteParser::DecVarContext::OAss() {
  return getToken(LatteParser::OAss, 0);
}

LatteParser::ExprContext* LatteParser::DecVarContext::expr() {
  return getRuleContext<LatteParser::ExprContext>(0);
}


size_t LatteParser::DecVarContext::getRuleIndex() const {
  return LatteParser::RuleDecVar;
}

void LatteParser::DecVarContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecVar(this);
}

void LatteParser::DecVarContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecVar(this);
}

LatteParser::DecVarContext* LatteParser::decVar() {
  DecVarContext *_localctx = _tracker.createInstance<DecVarContext>(_ctx, getState());
  enterRule(_localctx, 18, LatteParser::RuleDecVar);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(187);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(183);
      match(LatteParser::Identifier);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(184);
      match(LatteParser::Identifier);
      setState(185);
      match(LatteParser::OAss);
      setState(186);
      expr();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DecTypeContext ------------------------------------------------------------------

LatteParser::DecTypeContext::DecTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LatteParser::TypeNameContext* LatteParser::DecTypeContext::typeName() {
  return getRuleContext<LatteParser::TypeNameContext>(0);
}

LatteParser::DecTypeContext* LatteParser::DecTypeContext::decType() {
  return getRuleContext<LatteParser::DecTypeContext>(0);
}

tree::TerminalNode* LatteParser::DecTypeContext::OArrBL() {
  return getToken(LatteParser::OArrBL, 0);
}

tree::TerminalNode* LatteParser::DecTypeContext::OArrBR() {
  return getToken(LatteParser::OArrBR, 0);
}


size_t LatteParser::DecTypeContext::getRuleIndex() const {
  return LatteParser::RuleDecType;
}

void LatteParser::DecTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecType(this);
}

void LatteParser::DecTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LatteListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecType(this);
}


LatteParser::DecTypeContext* LatteParser::decType() {
   return decType(0);
}

LatteParser::DecTypeContext* LatteParser::decType(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  LatteParser::DecTypeContext *_localctx = _tracker.createInstance<DecTypeContext>(_ctx, parentState);
  LatteParser::DecTypeContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 20;
  enterRecursionRule(_localctx, 20, LatteParser::RuleDecType, precedence);

    
